Edit readme (#2827)
Adds a note in the readme documenting the resolution of #2325 for slow formatting performance if missing JVM exports.